@@ -11,32 +11,27 @@ import au.com.dius.pact.consumer.dsl.PactDslJsonRootValue;
 import au.com.dius.pact.consumer.dsl.PactDslWithProvider;
 import au.com.dius.pact.consumer.junit5.PactConsumerTestExt;
 import au.com.dius.pact.consumer.junit5.PactTestFor;
-import au.com.dius.pact.core.model.RequestResponsePact;
+import au.com.dius.pact.core.model.V4Pact;
 import au.com.dius.pact.core.model.annotations.Pact;
 import au.com.dius.pact.core.model.annotations.PactFolder;
 import java.text.MessageFormat;
 import java.util.List;
-import org.apache.http.client.fluent.Executor;
 import org.json.JSONException;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
-import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.TestPropertySource;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
+import org.springframework.test.context.junit.jupiter.SpringJUnitConfig;
 import uk.gov.hmcts.reform.iacaseapi.infrastructure.clients.IdamClientApi;
 import uk.gov.hmcts.reform.iacaseapi.infrastructure.clients.model.idam.User;
 
-@ExtendWith(SpringExtension.class)
 @ExtendWith(PactConsumerTestExt.class)
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
 @PactFolder("pacts")
 @PactTestFor(providerName = "ia_caseApi", port = "8892")
-@ContextConfiguration(classes = {IdamConsumerApplication.class})
+@SpringJUnitConfig(classes = {IdamConsumerApplication.class})
 @TestPropertySource(locations = {"classpath:application.properties"}, properties = {"idam.apiUrl=http://localhost:8892"})
 public class IdamClientApiConsumerTest {
 
@@ -46,16 +41,6 @@ public class IdamClientApiConsumerTest {
     private static final String USER_ID = "1111-2222-3333-4567";
     private static final String EMAIL = "ia-caseofficer%40fake.hmcts.net";
     private static final String QUERY = MessageFormat.format("id:{0}", USER_ID);
-
-    @BeforeEach
-    public void prepareTest() throws Exception {
-        Thread.sleep(2000);
-    }
-
-    @AfterEach
-    void teardown() {
-        Executor.closeIdleConnections();
-    }
 
     private DslPart createUserResponseEntityResponse() {
         return PactDslJsonArray.arrayEachLike()
@@ -69,7 +54,7 @@ public class IdamClientApiConsumerTest {
     }
 
     @Pact(provider = "idamClientApi_oidc", consumer = "ia_caseApi")
-    public RequestResponsePact generatePactFragmentGetUser(PactDslWithProvider builder) throws JSONException {
+    public V4Pact generatePactFragmentGetUser(PactDslWithProvider builder) throws JSONException {
         return builder
             .given("getUser is requested")
             .uponReceiving("A request for a GetUser")
@@ -81,7 +66,7 @@ public class IdamClientApiConsumerTest {
             .willRespondWith()
             .status(200)
             .body(createUserResponseEntityResponse())
-            .toPact();
+            .toPact(V4Pact.class);
     }
 
     @Test
@@ -90,7 +75,7 @@ public class IdamClientApiConsumerTest {
         List<User> userList = idamClientApi.getUser(AUTH_TOKEN, QUERY).getBody();
         assertNotNull(userList);
         assertFalse(userList.isEmpty());
-        User userInfo = userList.get(0);
+        User userInfo = userList.getFirst();
         assertEquals(EMAIL, userInfo.getEmail());
         assertEquals(USER_ID, userInfo.getId());
         assertEquals("Case", userInfo.getForename());
